# Generalized-Server-Side-Implementation

./: AStar.cpp  AStar.h  BFS.cpp  BFS.h  BestFS.cpp  BestFS.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.cpp  ClientHandler.h  CompareState.cpp  CompareState.h  DFSearch.cpp  DFSearch.h  FileCacheManager.cpp  FileCacheManager.h  Main.h  MatrixProblem.cpp  MatrixProblem.h  MatrixSolution.cpp  MatrixSolution.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MyPriorityQueue.cpp  MyPriorityQueue.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  ObjectAdapter.cpp  ObjectAdapter.h  README.md  RegAStar.cpp  RegAStar.h  Searchable.h  Searcher.h  SearcherAbstract.cpp  (+29 more)
Searcher Results/AStar/: AStar  AStar-15X15  AStar-17X17  AStar-18X18  AStar-23X23  AStar-27X27  AStar-31X31  AStar-42X42  AStar-48X48  AStar-49X49  AStar-50X50
Searcher Results/BFS/: BFS  BFS-15X15  BFS-17X17  BFS-18X18  BFS-23X23  BFS-27X27  BFS-31X31  BFS-42X42  BFS-48X48  BFS-49X49  BFS-50X50
Searcher Results/BestFS/: BestFS  BestFS-15X15  BestFS-17X17  BestFS-18X18  BestFS-23X23  BestFS-27X27  BestFS-31X31  BestFS-42X42  BestFS-48X48  BestFS-49X49  BestFS-50X50
Searcher Results/DFS/: DFS  DFS-15X15  DFS-17X17  DFS-18X18  DFS-23X23  DFS-27X27  DFS-31X31  DFS-42X42  DFS-48X48  DFS-49X49  DFS-50X50
Searcher Results/Matrix/: Matrix15x15.txt  Matrix17x17.txt  Matrix18x18.txt  Matrix23x23.txt  Matrix27x27.txt  Matrix31x31.txt  Matrix42x42.txt  Matrix48x48.txt  Matrix49x49.txt  Matrix50x50.txt  matrix_test.txt
